Much better support for release builds and logging.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   	/* eslint-enable */
   </script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/app.js"></script>
+  <script src="${ENTRY_POINT}"></script>
 </body>
 </html>
