Much improved graphics and CPU usage graphs

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Isomorphic</title>
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
 </head>
 <body>
   ${APP}
@@ -12,6 +13,7 @@
   	/* eslint-enable */
   </script>
   <script src="/socket.io/socket.io.js"></script>
+  <script src="${COMMON_POINT}"></script>
   <script src="${ENTRY_POINT}"></script>
 </body>
 </html>
